1. Should use echo over print unless you need to the return status of print.     - Small issue, but small things can add up. 2. include_once incurs extra overhead of checking existing includes.     - It is not necessary for us since we only include the files once.       Again small things can add up. 3. Anything between style or script tags should be HTML commented. 4. align is not a valid css property. 5. // is not a valid CSS commenting style, must use /* */. 6. Other misc cleanups/fixes, see diff. 7. Finally, lets do our part to be XHTML 1.1 :), not too hard.
git-svn-id: http://svn.enlightenment.org/svn/e/trunk@29474 7cbeb6ba-43b4-40fd-8cce-4c39aea84d33

--- a/web/www/style.css
+++ b/web/www/style.css
@@ -4,21 +4,29 @@ body {
    background-position    : top left;
    background-color       : #f4f4f4;
    text-align             : center;
-   padding-top            : 0px;
-   padding-bottom         : 0px;
-   padding-left           : 0px;
-   padding-right          : 0px;
-   margin                 : 0px;
+   padding:               : 0;
+   margin                 : 0;
 }
 
-//td.t { filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(enabled=true, sizingMethod=scale src='i/t.png'); }
-td.t { background-image:url("i/t.gif"); }
+/*td.t { filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(enabled=true, sizingMethod=scale src='i/t.png'); }*/
+td.t { 
+   background-image:url("i/t.gif"); 
+   width:50%; 
+   vertical-align:top; 
+   padding:0; 
+   margin:0;
+}
 td.t[class] { background-image:url("i/t.png"); }
-//td.tl { filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(enabled=true, sizingMethod=scale src='i/tl.png'); }
-td.tl { background-image:url("i/tl.gif"); }
+/*td.tl { filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(enabled=true, sizingMethod=scale src='i/tl.png'); }*/
+td.tl { 
+   background-image:url("i/tl.gif"); 
+   width:600px; 
+   height:250px;
+   padding:0;
+   margin:0;
+}
 td.tl[class] { background-image:url("i/tl.png"); }
 td.tl {
-   align                  : middle;
    text-align             : center;
    vertical-align         : bottom;
    width                  : 600px;
@@ -54,7 +62,7 @@ div.bod {
 hr {
    width                  : 200px;
    height                 : 1px;
-   background             : #eeeeee;
+   background-color       : #eeeeee;
    border                 : 0px;
 }
 
@@ -136,7 +144,6 @@ blockquote {
 }
 
 td.lnav {
-   align                  : middle;
    text-align             : center;
    vertical-align         : middle;
    width                  : 100px;
@@ -147,12 +154,11 @@ td.lnav {
    font-weight            : bold;
    white-space            : no-wrap;
 }
-//td.lnav { filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(enabled=true, sizingMethod=scale src='i/n.png'); }
+/*td.lnav { filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(enabled=true, sizingMethod=scale src='i/n.png'); }*/
 td.lnav { background-image:url("i/n.gif"); }
 td.lnav[class] { background-image:url("i/n.png"); }
 
 td.rnav {
-   align                  : middle;
    text-align             : center;
    vertical-align         : middle;
    width                  : 100px;
@@ -163,7 +169,7 @@ td.rnav {
    font-weight            : bold;
    white-space            : no-wrap;
 }
-//td.rnav { filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(enabled=true, sizingMethod=scale src='i/n.png'); }
+/*td.rnav { filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(enabled=true, sizingMethod=scale src='i/n.png'); }*/
 td.rnav { background-image:url("i/n.gif"); }
 td.rnav[class] { background-image:url("i/n.png"); }
 
@@ -196,9 +202,9 @@ li.navul, ul.navul {
    color                  : #222222;
    font-size              : 9px;
    font-weight            : bold;
-//   white-space            : no-wrap;
-//   text-transform         : none;
-//   list-style-type        : none;
+/*   white-space            : no-wrap;
+   text-transform         : none;
+   list-style-type        : none;*/
    list-style             : none;
    display                : inline;
 }
@@ -223,20 +229,46 @@ a.navul:hover {
    text-decoration        : none;
 }
 
+table.n {
+   width:100px; 
+   height:100px; 
+   clear:both; 
+   border:0; 
+   margin:0; 
+   padding:0; 
+   border-collapse:collapse;
+}
+
+table.nl {
+   float:left; 
+}
+
+table.nr {
+   float:right; 
+}
+
+table.h {
+   width:100%; 
+   padding:0; 
+   margin:0; 
+   border-collapse:collapse;
+}
+
+div.l {
+   clear:both; 
+   padding:7px 8px;
+}
+
+div.ll {
+   float:left;
+}
 
 
+div.lr {
+   float:right;
+}
 
-
-
-
-
-
-
-
-
-
-
-// OLD CSS STUFF TO STEAL FROM
+/* OLD CSS STUFF TO STEAL FROM */
 
 /*
 table.main {
